--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -8,6 +8,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -20,6 +23,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -32,6 +38,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -44,6 +53,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -156,6 +168,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ParentRole
+      any_category: true
+      category:
+        - ADCM
       child:
         - View cluster configurations
         - View service configurations
@@ -276,6 +291,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ParentRole
+      any_category: true
+      category:
+        - ADCM
       child:
         - Edit cluster configurations
         - Edit service configurations
@@ -323,6 +341,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ParentRole
+      any_category: true
+      category:
+        - ADCM
       child:
         - View cluster imports
         - View service imports
@@ -368,6 +389,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ParentRole
+      any_category: true
+      category:
+        - ADCM
       child:
         - Manage cluster imports
         - Manage service imports
@@ -382,6 +406,9 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -399,6 +426,9 @@ roles:
       init_params:
         app_name: cm
         model: ClusterObject
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -416,6 +446,9 @@ roles:
       init_params:
         app_name: cm
         model: Host
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -433,6 +466,9 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -450,6 +486,9 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -496,6 +535,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ParentRole
+      any_category: true
+      category:
+        - ADCM
       child:
         - Upgrade cluster bundle
         - Upgrade provider bundle
@@ -510,6 +552,9 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -527,6 +572,9 @@ roles:
       init_params:
         app_name: cm
         model: HostProvider
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -539,6 +587,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: true
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -551,6 +602,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -563,6 +617,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: cm
           models:
@@ -575,6 +632,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -587,6 +647,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -599,6 +662,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -611,6 +677,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -623,6 +692,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -635,6 +707,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -647,6 +722,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -659,6 +737,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -671,6 +752,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -683,6 +767,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -695,6 +782,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -707,6 +797,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: auth
           models:
@@ -719,6 +812,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -731,6 +827,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -743,6 +842,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
@@ -755,6 +857,9 @@ roles:
       type: business
       module_name: rbac.roles
       class_name: ModelRole
+      any_category: false
+      category:
+        - ADCM
       apps:
         - label: rbac
           models:
