--- a/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
@@ -14,6 +14,14 @@
   name: test_cluster
   version: 1.6
   edition: community
+  upgrade:
+    - versions:
+        min: 0.4
+        max: 1.5
+      name: upgrade to 1.6
+      states:
+        available: any
+        on_success: upgradable
 
   config: &common_config
   - name: boolean
