--- a/tests/functional/rbac/test_business_permissions_data/second_provider/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/second_provider/config.yaml
@@ -14,6 +14,14 @@
   name: test_provider
   version: 1.4
   edition: community
+  upgrade:
+    - versions:
+        min: 0.4
+        max: 1.3
+      name: upgrade to 1.4
+      states:
+        available: any
+        on_success: upgradable
 
   config: &common_config
   - name: boolean
