ADCM-2454 Fixed tests

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1137,7 +1137,7 @@ roles:
       type: role
       parametrized_by:
         - provider
-        - hosts
+        - host
       init_params:
         app_name: cm
         model: Cluster
