ADCM-2486 create custom add host role parametrized by provider

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -7,16 +7,18 @@ roles:
       description: The ability to add new host
       type: business
       module_name: rbac.roles
-      class_name: ModelRole
+      class_name: ObjectRole
+      parametrized_by:
+        - provider
       any_category: true
       category:
         - ADCM
       apps:
         - label: cm
           models:
-            - name: host
+            - name: hostprovider
               codenames:
-                - add
+                - add_host_to
 
     - name: Create provider
       description: The ability to add new provider
