ADCM-2486 add init_params and negative response if serializer not valid

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -10,6 +10,9 @@ roles:
       class_name: ObjectRole
       parametrized_by:
         - provider
+      init_params:
+        app_name: cm
+        model: HostProvider
       any_category: true
       category:
         - ADCM
