--- a/web/src/tsconfig.app.json
+++ b/web/src/tsconfig.app.json
@@ -1,6 +1,12 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "es2020.string",
+      "es2019",
+      "dom"
+    ],
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "types": []
