ADCM-2526: perm to add prototypes when upload bundle

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -67,6 +67,9 @@ roles:
             - name: bundle
               codenames:
                 - add
+            - name: prototype
+              codenames:
+                - add
 
     - name: View cluster configurations
       description: The ability to view the cluster configuration page
