ADCM-2503 Actions permissions case for "mimic" action with display name as another action from old bundle

--- a/tests/functional/rbac/actions/bundles/upgrade/new/config.yaml
+++ b/tests/functional/rbac/actions/bundles/upgrade/new/config.yaml
@@ -44,6 +44,14 @@
       <<: *job
       display_name: "No Rights"
 
+    changeling:
+      <<: *job
+      display_name: "Oi"
+
+    mimic:
+      <<: *job
+      display_name: "Whoops"
+
 - type: service
   version: 0.6
   name: servicemaster
