ADCM-2568 fix unittests

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1188,6 +1188,7 @@ roles:
         - View host configurations
         - Edit service configurations
         - Edit component configurations
+        - View host-components
         - Manage imports
 
     - name: Cluster Administrator
