--- a/tests/functional/rbac/actions/bundles/clone_cluster/config.yaml
+++ b/tests/functional/rbac/actions/bundles/clone_cluster/config.yaml
@@ -37,6 +37,10 @@
       states:
         available: any
 
+    same_display:
+      <<: *job
+      display_name: "same_display"
+
 - type: service
   version: 1.2
   name: actions_service
