--- a/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/second_cluster/config.yaml
@@ -11,7 +11,8 @@
 # limitations under the License.
 
 - type: cluster
-  name: test_cluster
+  name: another_cluster
+  display_name: Another name
   version: 1.6
   edition: community
   upgrade:
