adcm_client version's up

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,5 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-# TODO don't forget to fix it
-adcm_client==2022.1.25.16.dev0+adcm.1688
+adcm_client>=2022.1.27.13
 adcm-pytest-plugin~=4.14
 attr
 allure-pytest
